--- a/views/video2.ejs
+++ b/views/video2.ejs
@@ -1,15 +1,15 @@
 <div class="container-calculator">
   <nav class="navbar fixed-top navbar-expand-lg bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">E-Buddy</a>
+        <a href="#" class="navbar-brand" >E-Buddy</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/homepage">Dashboard</a>
-            <a class="nav-link" href="#">Menu</a>
-            <a class="nav-link" href="/video2">Video</a>
+            <a class="nav-link active" aria-current="page" href="/home">Dashboard</a>
+            <a class="nav-link" href="/menu">Menu</a>
+            <a class="nav-link" href="/video">Video</a>
             <a class="nav-link " href="/masatubuh">Calculator</a>
             <a class="nav-link " href="/tampilan">IMT</a>
           </div>
@@ -18,7 +18,7 @@
           <div class="justify-content-end">
             <a>
             <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
-               <button>Logout</button>
+              <button type="submit" class="btn btn-danger btn-sm">LOGOUT</button>
             </form>
             </a>
           </div>
@@ -26,151 +26,163 @@
     </div>
   </nav>
 </div>
-  
-  <div class="container-pilih container-fluid text-center align-items-center">
+<div class="container-pilih container-fluid text-center align-items-center">
 
-    <!-----------Menurunkan Berat Badan-------->
-    <h3>Menurunkan Berat Badan</h3>
-    <div class="row align-items-center text-center justify-content-center">
-      <div class="col">
-        <div class="card">
-          <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-          -->
+  <!-----------Menurunkan Berat Badan-------->
+  <h3>Menurunkan Berat Badan</h3>
+  <hr width="90%" size="3">
+
+  <div class="card-deck">
+      <div class="card">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe width="684" height="385" src="https://www.youtube.com/embed/0RAaxUoRkr4" title="7 Cara Mudah Menurunkan Berat Badan" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          </div>
             <div class="card-body">
             <h5 class="card-title">Menurunkan Berat Badan</h5>
             <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-            <a href="#" class="btn btn-primary">Pilih</a>
           </div>
         </div>
-      </div>
-      <div class="col">
         <div class="card">
-            <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-            -->
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="684" height="385" src="https://www.youtube.com/embed/rsZqOh6fR20" title="5 LANGKAH MUDAH TURUN BERAT BADAN DALAM WAKTU 1 MINGGU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="684" height="385" src="https://www.youtube.com/embed/rsZqOh6fR20" title="5 LANGKAH MUDAH TURUN BERAT BADAN DALAM WAKTU 1 MINGGU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+            <div class="card-body">
+            <h5 class="card-title">Menurunkan Berat Badan</h5>
+            <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
+          </div>
+      </div>
+      <div class="card">
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6e04T_3kQs4" title="CARA SEHAT MENURUNKAN BERAT BADAN DALAM 1 MINGGU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
               <div class="card-body">
               <h5 class="card-title">Menurunkan Berat Badan</h5>
               <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-              <a href="#" class="btn btn-primary">Pilih</a>
-            </div>
           </div>
       </div>
+      <div class="card">
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="684" height="385" src="https://www.youtube.com/embed/XQDOKcVRzHc" title="Cara Diet Sehat Menurunkan Berat Badan | Langkah 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
+              <div class="card-body">
+              <h5 class="card-title">Menurunkan Berat Badan</h5>
+              <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
+          </div>
+      </div>
+  </div>
 
-        <div class="col">
-            <div class="card">
-                <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-                -->
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6e04T_3kQs4" title="CARA SEHAT MENURUNKAN BERAT BADAN DALAM 1 MINGGU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                        <div class="card-body">
-                        <h5 class="card-title">Menurunkan Berat Badan</h5>
-                        <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-                        <a href="https://www.youtube.com/embed/6e04T_3kQs4" class="btn btn-primary">Pilih</a>
-                    </div>
-                </div>
-        </div>
+  <!-------------------Menjaga Berat Badan------------------------->
+  <h3>Menjaga Berat Badan</h3>
+  <hr width="90%" size="3">
 
-    </div>
-
-    <!-------------------Menjaga Berat Badan------------------------->
-    <h3>Menjaga Berat Badan</h3>
-    <div class="row align-items-center text-center justify-content-center">
-      <div class="col">
-        <div class="card">
-          <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-          -->
+  <div class="card-deck">
+      <div class="card">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe width="684" height="385" src="https://www.youtube.com/embed/dKOCQTA-PHQ" title="5 Tips Jitu Mempertahankan Berat Badan Setelah Diet - DOKTER SADDAM ISMAIL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
           </div>
             <div class="card-body">
-            <h5 class="card-title">Menurunkan Berat Badan</h5>
-            <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-            <a href="#" class="btn btn-primary">Pilih</a>
+            <h5 class="card-title">Menjaga Berat Badan</h5>
+            <p class="card-text">Pada bagian video ini bertujuan untuk Menjaga berat badan kamu.</p>
           </div>
         </div>
-      </div>
-      <div class="col">
         <div class="card">
-            <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-            -->
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="684" height="385" src="https://www.youtube.com/embed/p0CI1nTeCBo" title="4 ELEMEN DIET! PAHAMI AGAR BERHASIL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
               <div class="card-body">
-              <h5 class="card-title">Menurunkan Berat Badan</h5>
-              <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-              <a href="#" class="btn btn-primary">Pilih</a>
+              <h5 class="card-title">Menjaga Berat Badan</h5>
+              <p class="card-text">Pada bagian video ini bertujuan untuk menjaga berat badan kamu.</p>
             </div>
           </div>
+        <div class="card">
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="684" height="385" src="https://www.youtube.com/embed/RFJmTzGZLY8" title="6 CARA MENJAGA BERAT BADAN SETELAH DIET | TIPS DIET | PART 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+              <div class="card-body">
+              <h5 class="card-title">Menjaga Berat Badan</h5>
+              <p class="card-text">Pada bagian video ini bertujuan untuk menjaga berat badan kamu.</p>
+          </div>
       </div>
+      <div class="card">
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="684" height="385" src="https://www.youtube.com/embed/4jsu7oTUUbg" title="Cara Menjaga Berat Badan Setelah Turun- dr. Zaidul Akbar Official" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+          </div>
+              <div class="card-body">
+              <h5 class="card-title">Menjaga Berat Badan</h5>
+              <p class="card-text">Pada bagian video ini bertujuan untuk menjaga berat badan kamu.</p>
+          </div>
+      </div>
+  </div>
 
-        <div class="col">
-            <div class="card">
-                <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-                -->
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe width="684" height="385" src="https://www.youtube.com/embed/RFJmTzGZLY8" title="6 CARA MENJAGA BERAT BADAN SETELAH DIET | TIPS DIET | PART 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                        <div class="card-body">
-                        <h5 class="card-title">Menurunkan Berat Badan</h5>
-                        <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-                        <a href="https://www.youtube.com/embed/6e04T_3kQs4" class="btn btn-primary">Pilih</a>
-                    </div>
-                </div>
-        </div>
+
+
+      <!------------------------Menaikan Berat Badan--------------->
+  <h3>Menaikan Berat Badan</h3>
+  <hr width="90%" size="3">
+
+  <div class="card-deck">
+      <div class="card">
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="684" height="385" src="https://www.youtube.com/embed/j-khHxPAoYk" title="Bagaimana Cara Menambah Berat Badan" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="card-body">
+          <h5 class="card-title">Menaikan Berat Badan</h5>
+          <p class="card-text">Pada bagian video ini bertujuan untuk menaikan berat badan kamu.</p>
+          </div>
+      </div>
+      <div class="card">
+          <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="684" height="385" src="https://www.youtube.com/embed/tUbH4bLLF6Y" title="Here are 10 more tips to gain weight:" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+              <div class="card-body">
+              <h5 class="card-title">Menaikan Berat Badan</h5>
+              <p class="card-text">Pada bagian video ini bertujuan untuk menaikan berat badan kamu.</p>
+          </div>
+          </div>
+
+          <div class="card">
+              <div class="embed-responsive embed-responsive-16by9">
+                  <iframe width="684" height="385" src="https://www.youtube.com/embed/XQDOKcVRzHc" title="Cara Diet Sehat Menurunkan Berat Badan | Langkah 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
+                  <div class="card-body">
+                  <h5 class="card-title">Menaikan Berat Badan</h5>
+                  <p class="card-text">Pada bagian video ini bertujuan untuk menaikan berat badan kamu.</p>
+              </div>
+          </div>
+
+          <div class="card">
+              <div class="embed-responsive embed-responsive-16by9">
+                  <iframe width="684" height="385" src="https://www.youtube.com/embed/828jTC4odAI" title="CARA MENAMBAH BERAT BADAN | SUSAH GEMUK? JANGAN LAKUKAN KEBIASAAN INI!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    
+              </div>
+                  <div class="card-body">
+                  <h5 class="card-title">Menaikan Berat Badan</h5>
+                  <p class="card-text">Pada bagian video ini bertujuan untuk menaikan berat badan kamu.</p>
+              </div>
+          </div>
+  </div>
+</div>
+
+<div class="footer-menu container-fluid text-end justify-content-center">
+  <div class="row">
+    <div class="col-5">
+      <h3 class="text-center">E-Buddy</h3>
+      <p>E-buddy merupakan aplikasi yang membantu anda dalam meningkatkan kualitas kehidupan anda dengan
+        menjadikan anda dapat memantau index massa tubuh dan melakukan diet dari video yang sudah di sediakan.
+      </p>
     </div>
-
-
-        <!------------------------Menaikan Berat Badan--------------->
-    <h3>Menaikan Berat Badan</h3>
-    <div class="row align-items-center text-center justify-content-center">
-        <div class="col">
-        <div class="card">
-            <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-            -->
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="684" height="385" src="https://www.youtube.com/embed/j-khHxPAoYk" title="Bagaimana Cara Menambah Berat Badan" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="card-body">
-            <h5 class="card-title">Menurunkan Berat Badan</h5>
-            <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-            <a href="#" class="btn btn-primary">Pilih</a>
-            </div>
-        </div>
-        </div>
-        <div class="col">
-        <div class="card">
-            <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-            -->
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe width="684" height="385" src="https://www.youtube.com/embed/tUbH4bLLF6Y" title="Here are 10 more tips to gain weight:" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-                <div class="card-body">
-                <h5 class="card-title">Menurunkan Berat Badan</h5>
-                <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-                <a href="#" class="btn btn-primary">Pilih</a>
-            </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card">
-                <!--<img src="./image/icon/weight-loss.png" class="card-img-top" alt="loss">
-                -->
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe width="684" height="385" src="https://www.youtube.com/embed/RFJmTzGZLY8" title="6 CARA MENJAGA BERAT BADAN SETELAH DIET | TIPS DIET | PART 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-body">
-                    <h5 class="card-title">Menurunkan Berat Badan</h5>
-                    <p class="card-text">Pada bagian video ini bertujuan untuk menurunkan berat badan kamu.</p>
-                    <a href="https://www.youtube.com/embed/6e04T_3kQs4" class="btn btn-primary">Pilih</a>
-                </div>
-            </div>
-        </div>
-
+    <div class="col">
+      <p>Hubungi Kami</p>
+      <div class="hubungi">
+        <p><img src="gambar/telephone-handle-silhouette.png" alt="telephone">
+        : +6229013940</p>
+        <p><img src="gambar/email (1).png" alt="email"> : EBuddy@gmail.com</p>
+      </div>
     </div>
+    <div class="col">
+      <P>Ikuti Kami</P>
+      <a href="#"><img src="gambar/facebook.png" alt="facebook"></a>
+      <a href="#"><img src="gambar/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="gambar/twitter.png" alt="twitter"></a>
+      <a href="#"><img src="gambar/youtube.png" alt="youtube"></a>
+    </div>
+  </div>
+  
+  <smalltext class="text-center">Copyright © 2022 E-Buddy. All Rights Reserved.</smalltext>   
+</div>
