--- a/views/hellopage.ejs
+++ b/views/hellopage.ejs
@@ -1,62 +1,97 @@
-<div class="hello_page  container-fluid justify-content-center text-center">
-    <div class="hellopage">
-        <h1>Halo, Selamat Datang</h1>
-        <h4>Ayo tekadkan untuk membuat badan kamu sehat, mari gabung ke aplikasi kami</h4>
-        <a href="/login">
-        <button class="Login_hellopage">LogIn</button>
-        </a>
-        
-        <p>Belum Punya Akun?</p>
-        <a href="/register">
-        <button class="SignUp_hellopage">SignUp</button>
+
+    <div class="hello_page  container-fluid justify-content-center text-center">
+        <div class="hellopage">
+            <h1>Halo, Selamat Datang</h1>
+            <h4>Ayo tekadkan untuk membuat badan kamu sehat, mari gabung ke aplikasi kami</h4>
+            <a href="/login">
+                <button class="Login_hellopage">LogIn</button>
+            </a>
+
+            <p>Belum Punya Akun?</p>
+            <a href="register">
+                <button class="SignUp_hellopage">SignUp</button>
+            </a>
+        </div>
+    </div>
+
+    <div class="container_info container-fluid justify-content-center text-center">
+        <div class="info">
+            <div class="row">
+                <div class="col">
+                    <img src="/gambar/downloading.png" alt="Download" height="50px">
+                    <h5>Sudah 1 Juta pengguna Mendaftar</h5>
+                </div>
+                <div class="col">
+                    <img src="/gambar/review.png" alt="Review" height="50px">
+                    <h5>Lebih dari 100 Review Pengguna</h5>
+                </div>
+                <div class="col">
+                    <img src="/gambar/easy.png" alt="Easy" height="50px">
+                    <h5>Mudah untuk dilakukan</h5>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container_asal container-fluid align-items-center text-center">
+        <div class="container-tengah">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-6">
+                    <img src="/gambar/video.jpg" alt="" height="300px" class="img-fluid">
+                </div>
+                <div class="col bagian-1">
+                    <h4>Terdapat banyak Video penunjang, Agar tubuh kamu selalu sehat.</h4>
+                    <a href="/video">
+                        <button>Lihat lebih Lanjut</button>
+                    </a>
+                </div>
+
+                <div class="col-6 bagian-2">
+                    <h4>Banyak menu makanan yang bisa membantu kamu dalam membuat badan kamu menjadi badan impian kamu.</h4>
+                    <a href="/menu">
+                        <button>Lihat lebih Lanjut</button>  
+                    </a>
+                </div>
+                <div class="col">
+                    <img src="/gambar/menu2.jpg" alt="" height="300px" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer container-fluid text-center align-items-center">
+        <h1>Mari Bergabung dengan aplikasi kami</h1>
+        <h4>Rasakan manfaat dengan menjaga kesehatan tubuh mu, tubuh anda bahagia masa depan anda juga bahagia.</h4>
+        <a href="/home">
+            <button>Ikuti Program</button>
         </a>
     </div>
-</div>
 
-<div class="container_info container-fluid justify-content-center text-center">
-    <div class="info">
+    <div class="footer-menu container-fluid text-end justify-content-center">
         <div class="row">
-            <div class="col">
-                <img src="gambar/downloading.png" alt="Download" height="50px">
-                <h5>Sudah 1 Juta pengguna Mendaftar</h5>
-            </div>
-            <div class="col">./image/icon
-                <img src="gambar/review.png" alt="Review" height="50px">
-                <h5>Lebih dari 100 Review Pengguna</h5>
-            </div>
-            <div class="col">
-                <img src="gambar/easy.png" alt="Easy" height="50px">
-                <h5>Mudah untuk dilakukan</h5>
+          <div class="col-5">
+            <h3 class="text-center">E-Buddy</h3>
+            <p>E-buddy merupakan aplikasi yang membantu anda dalam meningkatkan kualitas kehidupan anda dengan
+              menjadikan anda dapat memantau index massa tubuh dan melakukan diet dari video yang sudah di sediakan.
+            </p>
+          </div>
+          <div class="col">
+            <p>Hubungi Kami</p>
+            <div class="hubungi">
+              <p><img src="/gambar/telephone-handle-silhouette.png" alt="telephone">
+              : +6229013940</p>
+              <p><img src="/gambar/email (1).png" alt="email"> : EBuddy@gmail.com</p>
             </div>
           </div>
+          <div class="col">
+            <P>Ikuti Kami</P>
+            <a href="#"><img src="/gambar/facebook.png" alt="facebook"></a>
+            <a href="#"><img src="/gambar/instagram.png" alt="instagram"></a>
+            <a href="#"><img src="/gambar/twitter.png" alt="twitter"></a>
+            <a href="#"><img src="/gambar/youtube.png" alt="youtube"></a>
+          </div>
         </div>
+        
+        <smalltext class="text-center">Copyright © 2022 E-Buddy. All Rights Reserved.</smalltext>   
     </div>
-</div>
-
-<div class="container_asal container-fluid align-items-center text-center">
-    <div class="container-tengah">
-        <div class="row justify-content-center align-items-center">
-            <div class="col-6">
-                <img src="gambar/video.jpg" alt="" height="300px">
-            </div>
-            <div class="col bagian-1">
-                <h4>Terdapat banyak Video penunjang, Agar tubuh kamu selalu sehat.</h4>
-                <button>Lihat lebih Lanjut</button>
-            </div>
-
-            <div class="col-6 bagian-2">
-                <h4>Banyak menu makanan yang bisa membantu kamu dalam membuat badan kamu menjadi badan impian kamu.</h4>
-                <button>Lihat lebih Lanjut</button>  
-            </div>
-            <div class="col">
-                <img src="gambar/menu2.jpg" alt="" height="300px">
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="footer container-fluid text-center align-items-center">
-    <h1>Mari Bergabung dengan aplikasi kami</h1>
-    <h4>Rasakan manfaat dengan menjaga kesehatan tubuh mu, tubuh anda bahagia masa depan anda juga bahagia.</h4>
-    <button>Ikuti Program</button>
-</div>
