--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,82 +1,130 @@
 <div class="container-calculator">
-    <nav class="navbar fixed-top navbar-expand-lg bg-light">
-      <div class="container">
-          <a class="navbar-brand" href="#">E-Buddy</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/homepage">Dashboard</a>
-              <a class="nav-link" href="#">Menu</a>
-              <a class="nav-link" href="/video2">Video</a>
-              <a class="nav-link " href="/masatubuh">Calculator</a>
-              <a class="nav-link " href="/tampilan">IMT</a>
-            </div>
+  <nav class="navbar fixed-top navbar-expand-lg bg-light">
+    <div class="container">
+        <a href=""class="navbar-brand" >E-Buddy</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/home">Dashboard</a>
+            <a class="nav-link" href="/menu">Menu</a>
+            <a class="nav-link" href="/video">Video</a>
+            <a class="nav-link " href="/masatubuh">Calculator</a>
+            <a class="nav-link " href="/tampilan">IMT</a>
           </div>
-          <div class="nav">
-            <div class="justify-content-end">
-              <a>
-              <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
-                 <button>Logout</button>
-              </form>
-              </a>
-            </div>
+        </div>
+        <div class="nav">
+          <div class="justify-content-end">
+            <a>
+            <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
+              <button type="submit" class="btn btn-danger btn-sm">LOGOUT</button>
+            </form>
+            </a>
           </div>
-      </div>
-    </nav>
-  </div>
-    <div class="container-isian container-fluid">
-
-        <div class="header text-center justify-content-center">
-            
-            <h1>Hello <%= name %></h1>
-            <img src="./image/human.jpg" alt="" class="rounded-circle">
-            <h3>Siapkan dirimu</h3>
-            <div class="container">
-                <p>Untuk menjadi lebih baik dengan E-Buddy, 
-                    kami membuatmu menjadi lebih dari 
-                    sebelumnya dengan sangat mudah 
-                    dan sangat efektif.
-                </p>
-                <button class="mulai">Lets Start</button>
-                <hr width="90%" size="3">
-            </div>
         </div>
+    </div>
+  </nav>
+</div>
 
-        <div class="container-bawah">
-            <div class="row">
-                <div class="col justify-content-center text-center ">
-                  <h3>Menu</h3>
-                  <img src="./image/menu.jpg" alt="" class="menu">
+<div class="container-isian container-fluid"> 
+    <div class="header text-center justify-content-center">
 
-                  <div class="row text-center justify-content-center">
-                    <div class="col-8">
-                        <p>Kami menyediakan pilhan menu kepada user apa
-                            bila user ingin membuat badan lebih sehat dengan
-                            makan yang teratur.
-                        </p>
-                      </div>
-                  </div>
-      
-                </div>
-
-                <div class="col justify-content-center text-center">
-                  
-                    
-                <h3>Video</h3>
-                <img src="./image/wk.jpg" alt="" class="menu rounded-4">
-                
-                <div class="row text-center justify-content-center">
-                    <div class="col-8">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis, esse sapiente excepturi ducimus error perspiciatis veritatis iusto? Quas cupiditate repudiandae quisquam eveniet, officia numquam architecto, sit perferendis, veritatis aut neque!
-                        </p>
-                    </div>
-                </div>
-              </div>
+        <img src="gambar/people.png" alt="Logo" class="logo">
+        <h1>Hello <%=name %></h1>
+        <h3>Siapkan dirimu</h3>
+        <div class="container">
+            <p>Untuk menjadi lebih baik dengan E-Buddy, 
+                kami membuatmu menjadi lebih dari 
+                sebelumnya dengan sangat mudah 
+                dan sangat efektif.
+            </p>
+            <a href="/masatubuh">
+              <button class="mulai ml-2">Lets Start</button>
+              <hr width="90%" size="3">
+            </a>
         </div>
-    
-
     </div>
 
+    <div class="container-bawah">
+        <div class="row">
+            <div class="col justify-content-center text-center ">
+              <h3>Menu</h3>
+              <img src="gambar/menu.jpg" alt="">
 
+              <div class="row text-center justify-content-center">
+                <div class="col-8">
+                    <p>Kami menyediakan pilhan menu kepada user apa
+                        bila user ingin membuat badan lebih sehat dengan
+                        makan yang teratur.
+                    </p>
+                  </div>
+              </div>
+  
+            </div>
+            <div class="col justify-content-center text-center">
+              <h3>Calculator</h3>
+              <img src="gambar/kalkulator.jpg" alt="Calculator">
+              <div class="row text-center justify-content-center">
+                  <div class="col-8">
+                      <p>Kalkulator membantu anda memonitoring bagaimana kondisi tubuh anda dengan hasil perhitungan yang akurat.
+                      </p>
+                  </div>
+              </div>
+            </div>
+
+            <div class="col justify-content-center text-center">
+            <h3>Video</h3>
+            <img src="gambar/wk.jpg" alt="">
+            <div class="row text-center justify-content-center">
+                <div class="col-8">
+                    <p>Video yang kami hadirkan merupakan video terpilih dengan tujuan yang spesifik agar kamu lebih percaya diri dengan bantuan kami.
+                    </p>
+                </div>
+            </div>
+          </div>
+    </div>
+  </div>
+
+
+</div>
+
+<div class="container_berita_dashboard container-fluid">
+  <h2 class="text-center">Artikel</h2>
+  <hr>
+  <div class="text-center">
+    <ul>
+      <li><a href="https://www.alodokter.com/menambah-berat-badan-menjadi-lebih-ideal">1. Cara menaikan Berat badan</a></li>
+      <li><a href="https://www.astronauts.id/blog/daftar-buah-buahan-yang-bagus-untuk-diet-bikin-sehat-tubuh/">2. Inilah buah-buahan yang dapat membuatmu kurus </a></li>
+      <li><a href="https://www.alodokter.com/tanpa-disadari-makanan-berbahaya-untuk-kesehatan-ini-sering-dikonsumsi">3.Makanan yang berbahaya untuk tubuh kamu.</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="footer-menu container-fluid text-end justify-content-center ">
+  <div class="row">
+    <div class="col-5">
+      <h3 class="text-center">E-Buddy</h3>
+      <p>E-buddy merupakan aplikasi yang membantu anda dalam meningkatkan kualitas kehidupan anda dengan
+        menjadikan anda dapat memantau index massa tubuh dan melakukan diet dari video yang sudah di sediakan.
+      </p>
+    </div>
+    <div class="col">
+      <p>Hubungi Kami</p>
+      <div class="hubungi">
+        <p><img src="gambar/telephone-handle-silhouette.png" alt="telephone">
+        : +6229013940</p>
+        <p><img src="gambar/email (1).png" alt="email"> : EBuddy@gmail.com</p>
+      </div>
+    </div>
+    <div class="col">
+      <P>Ikuti Kami</P>
+      <a href="#"><img src="/gambar/facebook.png" alt="facebook"></a>
+      <a href="#"><img src="gambar/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="gambar/twitter.png" alt="twitter"></a>
+      <a href="#"><img src="gambar/youtube.png" alt="youtube"></a>
+    </div>
+  </div>
+  
+  <smalltext class="text-center">Copyright © 2022 E-Buddy. All Rights Reserved.</smalltext>   
+</div>
