--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,51 +1,46 @@
     <section class="login d-flex">
-        <div class="login-left w-50 h-100">
-          <div class="row justify-content-center align-items-center h-100">
-            <div class="col-6">
-              <div class="header">
-                <h1>Welcome Back</h1>
-                <p>Selamat datang jangan lupa isi data ya!</p>
-              </div>
-              <% if (typeof error !== 'undefined'){ %>
-                <div class="alert alert-danger" role="alert">
-                  <ul>
-                     <%=error%>
-
-                  </ul>
-                  
-                </div>
-              <% } %> 
-              
-              <form method="POST" action="/login">
-              <div class="login-form">
-              <!-- Login -->
-                <label for="email" class="form-label">Email</label>
-                <input name="email" type="email" class="form-control" id="email" placeholder="Masukan Email">
-
-              <!-- password -->
-                <label for="password" class="form-label">Password</label>
-                <input name="password" type="password" class="form-control" id="email" placeholder="Masukan Password">
-     
-                <!-- Button -->
-                <div class="text-center">
-                  <button class="sign-in">Sign In</button>
-                  <span class="d-inline">Belum punya akun? <a href="/register" class="signup d-inline text-decoration-none">Ayo bikin akun</a></span>
-                </div>
-              </form>
-              </div>
+      <div class="login-left w-50 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="col-6">
+            <div class="header">
+              <h1>Welcome Back</h1>
+              <p>Selamat datang jangan lupa isi data ya!</p>
             </div>
-          </div>  
-        </div>
+            <% if (typeof error !== 'undefined'){ %>
+              <div class="alert alert-danger" role="alert">
+                <ul>
+                   <%=error%>
 
-        <div class = "login-right bg-primary w-50 h-100">
-          <img src="gambar/login.jpg" alt="">
-        </div>
-    </section>
+                </ul>
+                
+              </div>
+            <% } %> 
+            <form method="POST" action="/login">
+             <div class="login-form">
+            <!-- Login -->
+          
+              <label for="email" class="form-label">Email</label>
+              <input  name="email" type="email" class="form-control" id="email" placeholder="Masukan Email">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html> -->
+            <!-- password -->
+              <label for="password" class="form-label">Password</label>
+              <input name="password" type="password" class="form-control" id="email" placeholder="Masukan Password">
+              <!-- Button -->
+              <div class="container text-center">
+                  <button class="btn btn-primary ml-2 ">Masuk</button>
+              </div>
+            </form>
+              <div class="text-center"> 
+                    <span class="d-inline ">Belum punya akun? <a href= "/register" class="signup d-inline text-decoration-none">Ayo bikin akun</a></span>
+              </div>
+
+            </div>
+          </div>
+        </div>  
+      </div>
+
+      <div class = "login-right bg-primary w-50 h-100">
+        <img src= "gambar/login.jpg"  alt="">
+      </div>
+  </section>
+
