--- a/views/masatubuh.ejs
+++ b/views/masatubuh.ejs
@@ -1,15 +1,15 @@
 <div class="container-calculator">
   <nav class="navbar fixed-top navbar-expand-lg bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">E-Buddy</a>
+        <a href=""  class="navbar-brand" >E-Buddy</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/homepage">Dashboard</a>
+            <a class="nav-link active" aria-current="page" href="/home">Dashboard</a>
             <a class="nav-link" href="#">Menu</a>
-            <a class="nav-link" href="/video2">Video</a>
+            <a class="nav-link" href="/video">Video</a>
             <a class="nav-link " href="/masatubuh">Calculator</a>
             <a class="nav-link " href="/tampilan">IMT</a>
           </div>
@@ -18,7 +18,7 @@
           <div class="justify-content-end">
             <a>
             <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
-               <button>Logout</button>
+              <button type="submit" class="btn btn-danger btn-sm">LOGOUT</button>
             </form>
             </a>
           </div>
@@ -26,76 +26,84 @@
     </div>
   </nav>
 </div>
-        <div class="nav">
-          <div class="justify-content-end">
-        
-            <a>
-            <form method="POST" action="/logout?_method=DELETE" class="d-inline" >
-               <button>Logout</button>
-            </form>
-            </a>
-          </div>
-        </div>
-    </div>
-  </nav>
-</div>
-    <section class="login d-flex position-fixed">
-      <div class="container-left w-50 h-100">
-        <div class="row justify-content-center align-items-center h-100">
-          <div class="col-6">
+    <div class="container-kalkulator container-fluid">
+      <div class="kiri">
+        <div class="row justify-content-center">
+          <div class="col mt-5">
+            <% if (typeof errors !== 'undefined'){ %>
+              <div class="alert alert-danger" role="alert">
+                <ul>
+                    <%errors.forEach(errors => { %>
+                      <li><%= errors.msg %></li>
+                    <% }) %>
+
+                </ul>
+                
+              </div>
+            <% } %> 
             <form method="POST" action="/calculator">
-                <!--Berat Badan -->
-               
-                <div class="mb-2"> 
-                <label for="berat">Masukan Berat Badan</label>
-                <input name = "beratbadan" type="number" min="1" max="1000" class="form-control" id="berat" placeholder="Berat Badan">
-                </div>
-                <!--tinggi badan -->
-                <div class="mt-3">
-                <label for="tinggi">Masukan Tinggi Badan</label>
-                <input name="tinggi" type="number" min="1" max="1000" class="form-control" id="tinggi" placeholder="Tinggi Badan">
-                </div>
-                <!--  button Hitung -->
-                <div class="text-center mt-4 mb-3">
-                  <button class="hitung">Hitung</button>
-                </div>
-                <% if (typeof hasil !== 'undefined' ) { %>  
-                  <div class="alert alert-dark" role="alert">
-            
+              <div class="bagian-kiri mt-5">
+                  <!--Berat Badan -->
+                  <label for="berat">Masukan Berat Badan</label>
+                  <input name = "beratbadan" type="number" min="1" max="1000" step= "any" class="form-control" id="berat" placeholder="Berat Badan">
+  
+              <!--tinggi badan -->
+                  <label for="tinggi">Masukan Tinggi Badan</label>
+                  <input name="tinggi" type="number" min="1" max="1000" step= "any"  class="form-control" id="tinggi" placeholder="Tinggi Badan">
+  
+              </div>
+              
+              <!--  button Hitung -->
+              <div class="text-center mt-4 mb-3">
+                <button type="submit" class="btn btn-info ml-2">Hitung</button>
+              </div>
+            </form>
+          </div>
 
-                      <%= hasil %>  
-                  </div>
-                  <%}%>
-                 
-
-              </form>
+          <div class="col">
+              <div class="bagian-kanan">
+                  <h2 class="text-center">FYI</h2>
+                  <h4 class="text-center">(For Your Information)</h4>
+                  <div class="justify-content-center align-items-center text-center">
+                      <img src="/gambar/index.jpg" alt="IBM" height="300px">
+                      <p>Indeks Massa Tubuh (IMT) adalah salah satu cara 
+                      untuk mengetahui rentang berat badan ideal Anda 
+                      dan memprediksi seberapa besar risiko gangguan 
+                      kesehatan Anda. Metode ini digunakan untuk menentukan
+                      berat badan yang sehat 
+                      berdasarkan berat dan tinggi badan.</p>
+                </div>
+              </div>
           </div>
         </div>
       </div>
+    </div>
+    
 
-      <div class="container-right w-50 h-100">
-        <div class="row justify-content-center align-items-center text-center h-100">
-          <div class="col-11">
-            <h2>FYI</h2>
-            <h4>(For Your Information)</h4>
-            <div class="justify-content-center align-items-center text-center">
-              <img src="/gambar/index.jpg" alt="">
-              <p>Indeks Massa Tubuh (IMT) adalah salah satu cara 
-                untuk mengetahui rentang berat badan ideal Anda 
-                dan memprediksi seberapa besar risiko gangguan 
-                kesehatan Anda. Metode ini digunakan untuk menentukan
-                berat badan yang sehat 
-                berdasarkan berat dan tinggi badan.</p>
-            </div>
+    <div class="footer-menu container-fluid text-end justify-content-center">
+      <div class="row">
+        <div class="col-5">
+          <h3 class="text-center">E-Buddy</h3>
+          <p>E-buddy merupakan aplikasi yang membantu anda dalam meningkatkan kualitas kehidupan anda dengan
+            menjadikan anda dapat memantau index massa tubuh dan melakukan diet dari video yang sudah di sediakan.
+          </p>
+        </div>
+        <div class="col">
+          <p>Hubungi Kami</p>
+          <div class="hubungi">
+            <p><img src="/gambar/telephone-handle-silhouette.png" alt="telephone">
+            : +6229013940</p>
+            <p><img src="/gambar/email (1).png" alt="email"> : EBuddy@gmail.com</p>
           </div>
         </div>
-      </div>
+        <div class="col">
+          <P>Ikuti Kami</P>
+          <a href="#"><img src="/gambar/facebook.png" alt="facebook"></a>
+          <a href="#"><img src="/gambar/instagram.png" alt="instagram"></a>
+          <a href="#"><img src="/gambar/twitter.png" alt="twitter"></a>
+          <a href="#"><img src="/gambar/youtube.png" alt="youtube"></a>
+        </div>
 
-    <!-- </section> -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html> -->
+      </div> 
+      <smalltext class="text-center">Copyright © 2022 E-Buddy. All Rights Reserved.</smalltext>   
+  </div>
