--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,21 +1,4 @@
-<!-- <!doctype html>
-<html lang="en">
-  <head> -->
-    <!-- Required meta tags -->
-    <!-- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-
-    <!-- My Style-->
-    <!-- <link rel="stylesheet" href="css/style.css">
-
-    <title>Register</title>
-  </head>
-  <body> -->
-
-    <!-- <body> -->
       <section class="login d-flex">
           <div class="login-left w-100 h-100">
             <div class="row justify-content-center align-items-center h-100">
@@ -27,8 +10,8 @@
                   <% if (typeof errors !== 'undefined'){ %>
                     <div class="alert alert-danger" role="alert">
                       <ul>
-                          <%errors.forEach(error => { %>
-                            <li><%= error.msg %></li>
+                          <%errors.forEach(errors => { %>
+                            <li><%= errors.msg %></li>
                           <% }) %>
   
                       </ul>
@@ -50,22 +33,13 @@
                   <label for="password" class="form-label">Password</label>
                   <input name= "password" type="password" class="form-control" id="email" placeholder="Masukan Password">
                   
-                  <!-- Re Enter password-->
-                  <label for="password" class="form-label">Masukan ulang password</label>
-                  <input name= "checkpassword" type="password" class="form-control" id="email" placeholder="Masukan ulang Password">
 
-                  <!-- Button -->
-                  <div class="text-center">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" >
-                    <label class="form-check-label" for="invalidCheck">
-                      Agree to terms and conditions
-                    </label>
-                  </div>
-                  <div class="text-center">
-                    <button type= "submit" >Sign Up</button>
+                  
+                  <div class="text-center mr-3">
+                    <button type="sumbit" class="btn btn-primary ml-2 mt-3 ">Masuk</button>
                   </div>
 
-                  <div class="text-center">
+                  <div class="text-center mt-3 mr-5">
                     <span class="d-inline">Sudah punya akun? <a href="/login" class="d-inline text-decoration-none">Log in</a></span>
                   </div>
                 </form>
@@ -76,7 +50,7 @@
           </div>
   
           <div class = "login-right bg-dark w-100 h-100">
-            <img src="gambar/black.jpg" alt="">
+            <img src="/gambar/register.jpg" alt="">
           </div>
       </section>
 <!-- 
